# lionsolver

./: .env.local  .gitignore  ARCHITECTURE.md  ARCHITECTURE_NF_IMPORT.md  BUILD.bat  README.md  RELEASE.md  TODO.md  index.html  nf-import.md  package-lock.json  package.json  saas-pivot.md  supabase-schema.sql  supabase-update-tiers.sql
.agents/workflows/: claude.md
.github/workflows/: release.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: supabase.js
